--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-red: #ff0606;
+  --color-green: #0f7909;
+  --color-brown: #45351b;
+  --color-primary: #f4eff3;
+  --color-neg: #000000;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Nunito", sans-serif !important;
+  background-color: var(--color-neg) !important;
+}
+
+.containers{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.btn-success {
+  padding: 1rem 1.5rem;
+  outline: none;
+  background: transparent;
+  border: 2px solid var(--color-green);
+  font-size: 1.2rem;
+  transition: 800ms all ease;
+  border-radius: 2rem;
+  color: var(--color-primary);
+}
+
+h1, h2, h3, h4, p {
+  color: var(--color-primary);
+}
+
+.btn-success:hover{
+  background: var(--color-green);
+}
+
+
+@media screen and (max-width: 600px) {
+  .btn-success {
+    padding: 0.6rem;
+    outline: none;
+    background: transparent;
+    border: 4px solid var(--color-green);
+    font-size: 1.2rem;
+  }
 }
