--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,10 +2,11 @@
     text-align: center;
     padding-bottom: 2.2rem;
     color: #ff0606;
+    font-size: 2.5rem;
 }
 
 .about-container {
-    padding-top: 1rem;
+    margin-top: 4rem;
 }
 
 .about-grid {
