--- a/src/components/Mentors/team.css
+++ b/src/components/Mentors/team.css
@@ -6,7 +6,7 @@
 .photo-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 2rem;
   padding-top: 1rem;
 }
 
@@ -19,18 +19,14 @@
   border-radius: 1rem;
 }
 
-.person:hover {
-  background: var(--color-brown);
-  border: 2px solid transparent;
-}
-
 .person-image {
   width: 40%;
+  margin-bottom: 1rem;
 }
 
 .person-image img {
   width: 100%;
-  border-radius: 100%;
+  border-radius: 1rem;
 }
 
 .person h2 {
