--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -1,12 +1,14 @@
 .services-container {
-    margin-bottom: 2rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .services-container h1{
     color: var(--color-green);
     text-align: center;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
     padding-bottom: 1rem;
+
 }
 
 .services-container p{
