--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
   color: var(--color-primary);
 }
 
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, h6, p {
   color: var(--color-primary);
 }
 
