--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 95vh;
+    height: 100vh;
     object-fit:contain;
 }
 
@@ -12,6 +12,7 @@
     grid-template-columns: 56% 34%;
     gap: 10%;
     place-items: center;
+    padding: 2rem;
 }
 
 .header-one h1, .header-one p {
@@ -46,7 +47,7 @@
 
 @media screen and (max-width: 1100px) {
     .header-container {
-        padding-top: 8rem;
+        padding-top: 1rem;
     }
 
     .header-two {
@@ -55,7 +56,7 @@
 
     .header {
         display: block;
-        padding-top: 6rem;
+        padding-top: 5rem;
     }
 
     .header-one p, .header-one h1, .header-one h3{
