--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@ nav {
   z-index: 3;
   left: 0;
   top: 0;
+  height: 70px;
 }
 
 .nav-container {
@@ -13,7 +14,6 @@ nav {
   position: relative;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
   width: 100%;
 }
 
@@ -23,6 +23,14 @@ nav {
   margin-left: 1rem;
 }
 
+.nav-logo img {
+  width: 70%;
+  transition: 1000ms all ease;
+}
+
+.nav-logo img:hover {
+  background-color: #b0b0b0;
+}
 .nav-menu {
   display: flex;
   text-align: center;
@@ -77,17 +85,18 @@ nav {
 
 .nav-icon {
   display: none;
+    margin-left: 12rem;
   color: #f7f7f7;
+
 }
 
 .nav-icon .menu {
   font-size: 2.5rem;
-  margin-right: 2rem;
+  margin-right: 1.5rem;
 }
 
 @media (max-width: 900px) {
   .nav-logo {
-    flex-grow: 1;
     margin-left: 1rem;
   }
 
