--- a/src/components/Volunteers/volunteer.css
+++ b/src/components/Volunteers/volunteer.css
@@ -1,3 +1,50 @@
 .volunteer-container{
-    padding: 2rem 0;
+  padding: 2rem 0;
+}
+
+.team-container p {
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.volunteers {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding-top: 1rem;
+}
+
+/* .person {
+  padding: 1rem 0;
+  display: grid;
+  place-items: center;
+  transition: 1000ms all ease;
+  border: 2px solid var(--color-brown);
+  border-radius: 1rem;
+} */
+
+.person-image {
+  width: 40%;
+  margin-bottom: 1rem;
+}
+
+.person-image img {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.person h2 {
+  text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .photo-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .photo-container {
+    grid-template-columns: 1fr;
+  }
 }
