--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -5,9 +5,8 @@
   align-items: center;
   top: 0;
   left: 0;
-  /* height: 100vh; */
   width: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
   z-index: 999;
 }
 
@@ -16,14 +15,14 @@
   width: 85%;
   padding: 1em;
   margin: 0 auto;
+  height: 100vh;
   overflow-y: scroll;
-
 }
 
 .modal-body{
-    width: 90%;
-    color: #0000;
-    margin: o auto;
+  width: 90%;
+  color: #0000;
+  margin: o auto;
 }
 
 .modal-body img {
