--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -27,20 +27,17 @@
 } 
 
 .about-grid .grid-2{
-    border: 2px solid transparent;
-    padding: 1rem;
-    border-radius: 0.5rem;
-}
-
-.about-grid .grid-2:hover{
-    border: 2px solid var(--color-green);
+    border-left: 8px solid var(--color-red);  
+    padding-left: 1rem;
 }
 
 .about-grid .grid-2 p {
     text-align: justify;
+    font-size: 1.1rem;
+    padding-top: 1.6rem;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
     .about-grid{
         display: block;
     }
@@ -51,5 +48,6 @@
 
     .about-grid .grid-2 p {
         font-size: 1rem;
+        padding-top: 0;
     }
 }
