--- a/src/components/Mentors/team.css
+++ b/src/components/Mentors/team.css
@@ -1,3 +1,5 @@
+
+
 .team-container p {
   text-align: center;
   padding-bottom: 1rem;
@@ -8,9 +10,22 @@
   display: grid;
   place-items: center;
   transition: 1000ms all ease;
-  border: 2px solid var(--color-green);
+  /* background: var(--color-brown); */
+  border: 4px solid var(--color-brown);
+  border-left: 8px solid var(--color-red);  
+  border-right: 8px solid var(--color-red); 
   border-radius: 1rem;
-  height: 55vh;
+  transition: 800ms all ease;
+  height: 5in;
+}
+
+.person:hover{
+    transform: translateY(-8px);
+    box-shadow: 0 8px 8px 8px rgb(43, 45, 44);
+}
+
+.person h5, .person p {
+  color: var(--color-neg);
 }
 
 .person-image {
@@ -27,4 +42,7 @@
   text-align: center;
 }
 
+.person > button{
+  color: var(--color-neg);
+}
 
