--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  background: #b3b3b3;
+  background: var(--color-primary);
   height: 90px;
   position: fixed;
   width: 100%;
@@ -7,6 +7,8 @@ nav {
   left: 0;
   top: 0;
   height: 70px;
+  border-bottom: 2px solid var(--color-brown);
+  box-shadow: 0 3px 3px 3px rgba(146, 140, 140, 0.988);
 }
 
 .nav-container {
@@ -20,7 +22,7 @@ nav {
 .nav-logo {
   align-items: center;
   cursor: pointer;
-  margin-left: 1rem;
+  margin-left: 2rem;
 }
 
 .nav-logo img {
@@ -45,7 +47,7 @@ nav {
 }
 
 .nav-menu a {
-  color: #f7f7f7;
+  color: var(--color-neg);
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 600;
@@ -86,7 +88,7 @@ nav {
 .nav-icon {
   display: none;
     margin-left: 12rem;
-  color: #f7f7f7;
+  color: var(--color-neg);
 
 }
 
@@ -96,8 +98,14 @@ nav {
 }
 
 @media (max-width: 900px) {
+
+  .nav-container{
+    padding-top: 0.5rem;
+  }
+
   .nav-logo {
-    margin-left: 1rem;
+    margin-left:  1rem;
+    
   }
 
   .nav-menu {
@@ -112,6 +120,7 @@ nav {
     top: 90%;
     transition: 0.5s ease-in-out;
     width: 100%;
+    height: 100vh;
     text-align: right;
     padding: 3rem;
     list-style: none;
@@ -133,5 +142,6 @@ nav {
   .nav-icon {
     display: block;
     cursor: pointer;
+    /* padding-top: 0.5rem; */
   }
 }
