--- a/src/components/Volunteers/volunteer.css
+++ b/src/components/Volunteers/volunteer.css
@@ -20,12 +20,22 @@
 }
 
 .volunteer-group {
-  padding: 1rem 0;
+  padding: 3rem 0;
   display: grid;
   place-items: center;
   transition: 1000ms all ease;
-  border: 2px solid var(--color-green);
+  /* background: var(--color-brown); */
+  border: 4px solid var(--color-brown);
+  border-left: 10px solid var(--color-red);  
+  border-right: 10px solid var(--color-red);
+  transition: 800ms all ease;
   border-radius: 1rem;
+  height: 5in;
+}
+
+.volunteer-group:hover{
+  transform: translateY(-8px);
+  box-shadow: 0 8px 8px 8px rgb(43, 45, 44);
 }
 
 
@@ -39,6 +49,10 @@
   border-radius: 1rem;
 }
 
+.volunteer-group > h5, h6{
+  color: var(--color-neg);
+}
+
 .person h2 {
   text-align: center;
 }
@@ -49,9 +63,9 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 790px) {
   .volunteers {
-    grid-template-columns: 1fr;
+    grid-template-columns: 2fr;
   }
 
   .volunteer-container h1{
