--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -11,7 +11,7 @@
 }
 
 .modal {
-  background: var(--color-neg);
+  background: var(--color-primary);
   width: 100%;
   padding: 1em;
   margin: 0 auto;
@@ -26,6 +26,7 @@
 
 .modal-body p i{
   font-size: 0.9rem;
+  color: var(--color-neg);
 }
 
 .modal-body p{
@@ -46,7 +47,7 @@
   padding: 0.3rem;
   border-radius: 0.3rem;
   outline: none;
-  border: none;
+  border: 1px solid var(--color-neg);
   cursor: pointer;
   transition: 800ms all ease;
 }
