--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -4,53 +4,73 @@
 }
 
 .services-container h1{
-    color: var(--color-green);
+    color: var(--color-red);
     text-align: center;
     font-size: 2.5rem;
     padding-bottom: 1rem;
 
 }
 
-.services-container p{
+.services-container > p{
     text-align: center;
     padding-bottom: 1rem;
-    color: var(--color-primary);
+    color: var(--color-neg);
+    font-size: 1.1rem;
 }
 
 .service-grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 .service-card{
-    border: 2px solid var(--color-green);
-    padding: 1rem;
-    border-radius: 0.5rem;
+    padding: 2rem 1rem;
+    border-radius: 3rem;
     display: flex;
     align-items: center;
     gap: 2rem;
     transition: 1000ms all ease;
+    border: 4px solid var(--color-brown);
+    border-left: 8px solid var(--color-red);  
+    border-right: 8px solid var(--color-red);  
 }
 
 .service-card:hover{
-    background: var(--color-green);
+    transform: translateY(-8px);
+    box-shadow: 0 8px 8px 8px rgb(43, 45, 44);
 }
 
 .service-card p {
+    color: var(--color-neg);
     text-align: start;
 }
 
 .icon-container {
     font-size: 4rem;
-    color: var(--color-primary);
+    color: var(--color-neg);
 }
 
+
+
 .service-card h2{
-    color: var(--color-red);
+    color: var(--color-neg);
+    padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 900px) {
+    .service-card{
+        display: block;
+        text-align: center;
+    }
+
+    .service-card p {
+    text-align: center;
+}
+}
+
+
+@media screen and (max-width: 700px) {
     .service-grid {
         grid-template-columns: 1fr;
     }
