--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,11 +16,6 @@
   padding: 2rem;
 }
 
-.header-one h1,
-.header-one p {
-  color: var(--color-primary);
-}
-
 .header-one h1 {
   font-size: 2.7rem;
 }
@@ -42,8 +37,10 @@
 }
 
 .header-one p {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin: 0.5rem 0 0.5rem 0;
+  color: var(--color-brown) !important; 
+  text-align: justify;
 }
 
 @media screen and (max-width: 1100px) {
