--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about-container h1 {
     text-align: center;
     padding-bottom: 2.2rem;
-    color: #ff0606;
+    color: var(--color-green);
     font-size: 2.5rem;
 }
 
@@ -27,7 +27,7 @@
 } 
 
 .about-grid .grid-2{
-    border-left: 8px solid var(--color-red);  
+    border-left: 8px solid var(--color-green);  
     padding-left: 1rem;
 }
 
