--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header-container {
+/* .header-container {
   background: linear-gradient(rgba(255, 255, 255, 0.912), rgba(0, 0, 0, 0.7)),
     url("../../Assets/home1logo.png");
   background-position: center;
@@ -6,7 +6,7 @@
   background-size: cover;
   height: 110vh;
   object-fit: contain;
-}
+} */
 
 .header {
   display: grid;
