--- a/src/components/Mentors/team.css
+++ b/src/components/Mentors/team.css
@@ -1,48 +1,45 @@
-
-
 .team-container p {
   text-align: center;
   padding-bottom: 1rem;
 }
 
 .person {
-  padding: 1rem 0;
+  padding: 2rem 0;
   display: grid;
   place-items: center;
   transition: 1000ms all ease;
-  /* background: var(--color-brown); */
   border: 4px solid var(--color-brown);
-  border-left: 8px solid var(--color-red);  
-  border-right: 8px solid var(--color-red); 
+  border-left: 8px solid var(--color-green);
+  border-right: 8px solid var(--color-green);
   border-radius: 1rem;
   transition: 800ms all ease;
-  height: 5in;
 }
 
-.person:hover{
-    transform: translateY(-8px);
-    box-shadow: 0 8px 8px 8px rgb(43, 45, 44);
+.person:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 4px 4px 4px rgb(172, 176, 174);
 }
 
-.person h5, .person p {
+.person h5,
+.person p {
   color: var(--color-neg);
 }
 
 .person-image {
-  width: 30%;
   margin-bottom: 1rem;
 }
 
 .person-image img {
   width: 100%;
+  height: 30vh;
   border-radius: 1rem;
+  object-fit: cover;
 }
 
 .person h2 {
   text-align: center;
 }
 
-.person > button{
+.person > button {
   color: var(--color-neg);
 }
-
