--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,8 +7,8 @@ nav {
   left: 0;
   top: 0;
   height: 70px;
-  border-bottom: 2px solid var(--color-brown);
-  box-shadow: 0 3px 3px 3px rgba(146, 140, 140, 0.988);
+  /* border-bottom: 1px solid rgba(146, 140, 140, 0.988); */
+  box-shadow: 1px 2px 1px 1px rgba(234, 233, 233, 0.988);
 }
 
 .nav-container {
