--- a/src/components/TeamCard/Volunteers/volunteer.css
+++ b/src/components/TeamCard/Volunteers/volunteer.css
@@ -20,30 +20,32 @@
 }
 
 .volunteer-group {
-  padding: 2rem 0;
+  padding: 3rem 0;
   display: grid;
   place-items: center;
   transition: 1000ms all ease;
-  border: 1px solid var(--color-green);
-  border-left: 8px solid var(--color-green);  
-  border-right: 8px solid var(--color-green);
+  /* background: var(--color-brown); */
+  border: 4px solid var(--color-brown);
+  border-left: 10px solid var(--color-red);  
+  border-right: 10px solid var(--color-red);
   transition: 800ms all ease;
   border-radius: 1rem;
+  height: 5in;
 }
 
 .volunteer-group:hover{
   transform: translateY(-8px);
-  box-shadow: 0 3px 3px 3px rgb(43, 45, 44);
+  box-shadow: 0 8px 8px 8px rgb(43, 45, 44);
 }
 
 
 .volunteer-image{
+  width: 40%;
   margin-bottom: 1rem;
 }
 
 .volunteer-image img {
   width: 100%;
-  height: 30vh;
   border-radius: 1rem;
 }
 
@@ -61,7 +63,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 790px) {
   .volunteers {
     grid-template-columns: 2fr;
   }
