removed p-tag from volunteer components

--- a/src/components/Volunteers/volunteer.css
+++ b/src/components/Volunteers/volunteer.css
@@ -1,6 +1,6 @@
-.volunteer-container{
+/* .volunteer-container{
   padding: 4rem 0;
-}
+} */
 
 .volunteer-container h1, .volunteer-container h4{
   text-align: center;
