--- a/src/pages/Volunteers/volunteer.css
+++ b/src/pages/Volunteers/volunteer.css
@@ -1,22 +1,10 @@
-/* .volunteer-container{
-  padding: 4rem 0;
-} */
-
-.volunteer-container h1, .volunteer-container h4{
-  text-align: center;
-  padding-bottom: 1rem;
+.volunteer-container{
+  padding: 8rem 0 4rem 0;
 }
 
 .volunteer-container h1{
-  font-size: 2.5rem;
-  color: var(--color-green);
-}
-
-.volunteers {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-  padding-top: 1rem;
+  text-align: center;
+  padding-bottom: 1rem;
 }
 
 .volunteer-group {
@@ -28,7 +16,16 @@
   border-left: 8px solid var(--color-green);  
   border-right: 8px solid var(--color-green);
   transition: 800ms all ease;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+  width: 27vw;
+  margin: 0 auto;
+}
+
+.volunteers {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5rem;
+  padding-top: 1rem;
 }
 
 .volunteer-group:hover{
@@ -36,19 +33,24 @@
   box-shadow: 0 3px 3px 3px rgb(43, 45, 44);
 }
 
-
 .volunteer-image{
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 .volunteer-image img {
   width: 100%;
   height: 30vh;
+  object-fit: contain;
+  display: grid;
   border-radius: 1rem;
+  place-items: center;
 }
 
 .volunteer-group > h5, h6{
   color: var(--color-neg);
+  width: 100%;
+  text-align: center;
 }
 
 .person h2 {
@@ -56,6 +58,11 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .volunteer-group{
+    width: 80%;
+    height: 46vh;
+  }
+
   .volunteers {
     grid-template-columns: repeat(2, 1fr);
   }
