--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,11 +1,11 @@
 #contact{
-    padding: 2rem 0;
+    padding: 8rem 0rem 4rem 0rem;
 }
 
 .contact-container h1{
     font-size: 2.5rem;
     text-align: center;
-    color: var(--color-red);
+    color: var(--color-green);
 }
 
 .contact-image{
@@ -30,6 +30,10 @@
     font-size: 1rem;
 }
 
+.item p{
+    text-align: start;
+}
+
 i {
     font-size: 1.45rem;
 }
@@ -39,6 +43,10 @@ i {
         display: block;
         text-align: center;
     }
+
+    .item p{
+    text-align: center;
+}
 
     .contact-image{
         padding-bottom: 2rem;
