--- a/src/pages/Mentors/team.css
+++ b/src/pages/Mentors/team.css
@@ -44,7 +44,7 @@
 .photo-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    row-gap: 1.5rem;
+    gap: 1.5rem;
 }
 
 .person-mentor {
@@ -56,7 +56,7 @@
   border-right: 8px solid var(--color-green);
   transition: 800ms all ease;
   border-radius: 1rem;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
