--- a/src/pages/Mentors/team.css
+++ b/src/pages/Mentors/team.css
@@ -75,6 +75,11 @@
     object-fit: contain;
 }
 
+.team-btn{
+    text-decoration: underline;
+    color: #000
+}
+
 
 @media screen and (max-width: 1200px) {
 
