--- a/src/pages/Mentors/team.css
+++ b/src/pages/Mentors/team.css
@@ -48,6 +48,7 @@
 }
 
 .person-mentor {
+  padding: 1rem;
   display: grid;
   place-items: center;
   border: 1px solid var(--color-green);
@@ -72,6 +73,12 @@
     width: 100%;
     height: 40vh;
     object-fit: contain;
+}
+
+.person-mentor > h5, h6, Link{
+  color: var(--color-neg);
+  width: 100%;
+  text-align: center;
 }
 
 .team-btn{
