--- a/src/pages/Mentors/team.css
+++ b/src/pages/Mentors/team.css
@@ -75,7 +75,7 @@
     object-fit: contain;
 }
 
-.person-mentor > h5, h6, Link{
+.person-mentor > h5, h6, .team-btn{
   color: var(--color-neg);
   width: 100%;
   text-align: center;
@@ -83,7 +83,8 @@
 
 .team-btn{
     text-decoration: underline;
-    color: #000
+    color: #000;
+    font-size: 0.8rem
 }
 
 
